[package]
name = "agentropic"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
description = "Agent-Oriented Programming in Rust - Batteries Included"
repository = "https://github.com/agentropic/agentropic"
documentation = "https://docs.rs/agentropic"
keywords = ["agents", "multi-agent", "aop", "bdi", "distributed"]
categories = ["simulation", "concurrency", "asynchronous"]
readme = "README.md"

[dependencies]
# As crates are completed, add them here with path + version
agentropic-core = { version = "0.1.0", path = "../agentropic-core" }
agentropic-messaging = { version = "0.1.0", path = "../agentropic-messaging" }

# Coming soon
# agentropic-cognition = { version = "0.1.0", path = "../agentropic-cognition" }
# agentropic-patterns = { version = "0.1.0", path = "../agentropic-patterns" }
# agentropic-runtime = { version = "0.1.0", path = "../agentropic-runtime" }
# agentropic-deploy = { version = "0.1.0", path = "../agentropic-deploy", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[features]
default = []
# deploy = ["agentropic-deploy"]
