[package]
name = "agentropic"
version = "0.1.0"
edition = "2021"
authors = ["Agentropic Contributors"]
license = "MIT OR Apache-2.0"
description = "Comprehensive Rust framework for building intelligent, autonomous multi-agent systems"
repository = "https://github.com/agentropic/agentropic"
documentation = "https://docs.rs/agentropic"
keywords = ["agents", "multi-agent", "AOP", "autonomous", "coordination"]
categories = ["simulation", "algorithms"]
readme = "README.md"

[dependencies]
agentropic-core = { git = "https://github.com/agentropic/agentropic-core", branch = "main" }
agentropic-messaging = { git = "https://github.com/agentropic/agentropic-messaging", branch = "main" }
agentropic-cognition = { git = "https://github.com/agentropic/agentropic-cognition", branch = "main" }
agentropic-patterns = { git = "https://github.com/agentropic/agentropic-patterns", branch = "main" }
agentropic-runtime = { git = "https://github.com/agentropic/agentropic-runtime", branch = "main" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
anyhow = "1.0"

[[example]]
name = "quickstart"
path = "examples/quickstart.rs"

[[example]]
name = "messaging"
path = "examples/messaging.rs"

[[example]]
name = "swarm"
path = "examples/swarm.rs"

[[example]]
name = "full_stack"
path = "examples/full_stack.rs"
